Creating imagens folder & correcting addres logo and technician

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ===== HEADER ===== -->
   <header class="header">
-    <img src="logo.png" alt="Nexus Oficina" class="logo" />
+    <img src="images/logo.jpg" alt="Nexus Oficina" class="logo" />
 
     <button class="menu-btn" id="menuBtn">
       <span></span>
