Alteração tamanho logo e endereço

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <section class="localizacao" id="localizacao">
     <a href="https://maps.google.com" target="_blank">
       <img src="mapa.jpg" alt="Mapa">
-      <p>Rua Capitão Mário Barbeiro, 540</p>
+      <p>Rua Capitão Mário Barbedo, 540</p>
     </a>
   </section>
 
