add logo footer

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <img src="logo.png" alt="">
+    <img src="images/logo.jpg" alt="">
     <p>WhatsApp: (21) 99876-1020</p>
   </footer>
 
