add class image footer & correcting height

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <img src="images/logo.jpg" alt="">
+    <img src="images/logo.jpg" alt="" class="logo-footer">
     <p>WhatsApp: (21) 99876-1020</p>
   </footer>
 
