creating responsive header for PC

--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
 
   <!-- ===== HEADER ===== -->
   <header class="header">
-    <img src="images/logo.jpg" alt="Nexus Oficina" class="logo" />
+  <img src="images/logo.jpg" alt="Nexus Oficina" class="logo" />
 
-    <button class="menu-btn" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-  </header>
+  <!-- Botão mobile -->
+  <button class="menu-btn" id="menuBtn" aria-label="Abrir menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
 
+  <!-- Menu desktop -->
+  <nav class="menu-desktop">
+    <a href="#home">Home</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#quem-somos">Quem somos</a>
+    <a href="#localizacao">Como chegar</a>
+  </nav>
+</header>
   <!-- ===== MENU MOBILE ===== -->
   <nav class="mobile-menu" id="mobileMenu">
     <a href="#home">Home</a>
