create basic carousel in quem somos

--- a/index.html
+++ b/index.html
@@ -52,22 +52,18 @@
   </section>
 
   <!-- ===== PARTE 3 | QUEM SOMOS ===== -->
+ 
+ 
   <section class="quem-somos" id="quem-somos">
     <h2>Quem Somos</h2>
-
-    <div class="carousel">
-      <div class="carousel-track">
-        <img src="foto1.jpg" alt="">
-        <img src="foto2.jpg" alt="">
-        <img src="foto3.jpg" alt="">
-        <img src="foto4.jpg" alt="">
-        <img src="foto5.jpg" alt="">
-      </div>
-
-      <div class="carousel-dots">
-        <span></span><span></span><span></span><span></span><span></span>
-      </div>
-    </div>
+        <div id="dots">
+              <span class="dot active" data-index="0"></span>
+              <span class="dot" data-index="1"></span>
+              <span class="dot" data-index="2"></span>
+              <span class="dot" data-index="3"></span>
+              <span class="dot" data-index="4"></span>
+        </div>
+        <img id="carousel-image" src="images/foto1.jpg" alt="Imagem">
   </section>
 
   <!-- ===== PARTE 4 | SERVIÇOS ===== -->
