create carousel in avaliations and modern button google

--- a/index.html
+++ b/index.html
@@ -116,14 +116,31 @@
   <section class="avaliacoes">
     <h2>Avaliações Google</h2>
 
-    <div class="avaliacao-slider">
-      <!-- estrutura pronta para JS -->
-      <div class="avaliacao">★★★★★ Excelente atendimento!</div>
-      <div class="avaliacao">★★★★★ Profissionais de confiança</div>
-      <div class="avaliacao">★★★★★ Serviço rápido e honesto</div>
-    </div>
+   <div class="carousel-track">
 
-    <a href="#" class="btn-google">Avaliar no Google</a>
+  <div class="review-slide">
+    <img src="images/av1.jpg" alt="Avaliação 1">
+  </div>
+
+  <div class="review-slide">
+    <img src="images/av2.jpg" alt="Avaliação 2">
+  </div>
+
+  <div class="review-slide">
+    <img src="images/av3.jpg" alt="Avaliação 3">
+  </div>
+
+  <div class="review-slide">
+    <img src="images/av4.jpg" alt="Avaliação 4">
+  </div>
+
+  <div class="review-slide">
+    <img src="images/av5.jpg" alt="Avaliação 5">
+  </div>
+
+</div>
+
+    <a href="https://maps.app.goo.gl/9Kx8Cd5xXWcSMCdn7" class="btn-google">⭐O que nossos clientes dizem no Google</a>
   </section>
 
   <!-- ===== WHATSAPP CTA ===== -->
