create new maps and little change

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <a href="#home">Home</a>
     <a href="#servicos">Serviços</a>
     <a href="#quem-somos">Quem somos</a>
+    <a href="#contato">Fale conosco</a>
     <a href="#localizacao">Como chegar</a>
   </nav>
 </header>
@@ -32,6 +33,7 @@
     <a href="#home">Home</a>
     <a href="#servicos">Serviços</a>
     <a href="#quem-somos">Quem somos</a>
+    <a href="#contato">Fale conosco</a>
     <a href="#localizacao">Como chegar</a>
   </nav>
 
@@ -55,7 +57,17 @@
  
  
   <section class="quem-somos" id="quem-somos">
-    <h2>Quem Somos</h2>
+    <h2>Quem Somos | Nexus Oficina</h2>
+    <p> Na Nexus Oficina, a paixão por motores e a busca pela excelência andam juntas. Somos especializados em oferecer soluções automotivas completas, combinando tecnologia de ponta com o conhecimento técnico de uma equipe apaixonada pelo que faz. 
+<p>Fundada com o objetivo de mudar a experiência de manutenção automotiva, a Nexus se consolidou como referência em diagnósticos precisos e reparos de alta qualidade.</p>
+<p>Nossa Missão</p>
+<p>Conectar você a soluções automotivas eficientes e transparentes, assegurando a máxima performance e longevidade do seu veículo com um atendimento humanizado e justo.
+<p>Por que escolher a Nexus?</p>
+<p>Equipe Especializada: Técnicos treinados e em constante atualização.</p>
+<p>Tecnologia de Ponta: Equipamentos modernos para diagnósticos precisos.</p>
+<p>Transparência: Orçamentos detalhados e respeito ao cliente.</p>
+
+
         <div id="dots">
               <span class="dot active" data-index="0"></span>
               <span class="dot" data-index="1"></span>
@@ -144,16 +156,23 @@
   </section>
 
   <!-- ===== WHATSAPP CTA ===== -->
-  <section class="cta-whatsapp">
-    <a href="https://wa.me/5521998761020" target="_blank">
-      Clique aqui e converse agora com nossa equipe
-    </a>
+  <section class="contato" id="contato" >
+    <h2>Entre em Contato</h2>
+    <p> Nos relate o que está acontecendo com seu veículo, estamos prontos pra solucionar seu problema.</p>
+   <a
+        href="https://wa.me/5521998761020"class="cta-whatsapp2"
+        target="_blank"
+        class="btn-whatsapp"
+      >
+        Clique aqui e converse agora com nossa equipe
+      </a>
   </section>
 
   <!-- ===== LOCALIZAÇÃO ===== -->
   <section class="localizacao" id="localizacao">
-    <a href="https://maps.google.com" target="_blank">
-      <img src="mapa.jpg" alt="Mapa">
+    <h2>Como chegar</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.140868551797!2d-43.4004763!3d-22.834277200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x69230ad60679102b%3A0x7c1d9880936d6ec1!2sNexus%20Oficina!5e0!3m2!1spt-BR!2sbr!4v1771331122696!5m2!1spt-BR!2sbr" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   
       <p>Rua Capitão Mário Barbedo, 540</p>
     </a>
   </section>
