add images services

--- a/index.html
+++ b/index.html
@@ -88,38 +88,39 @@
 
       <!-- CARD SERVIÇO -->
       <div class="servico-card">
-        <img src="servico.jpg" alt="">
         <h3>Airbag</h3>
+        <img src="images/airbag.jpg" alt="">
+        
         <p><!-- descrição a preencher --></p>
       </div>
 
       <div class="servico-card">
-        <img src="servico.jpg" alt="">
         <h3>ABS</h3>
+        <img src="images/abs.jpg" alt="">
         <p></p>
       </div>
 
       <div class="servico-card">
-        <img src="servico.jpg" alt="">
         <h3>Injeção Eletrônica</h3>
+        <img src="images/injecao.jpg" alt="">
         <p></p>
       </div>
 
       <div class="servico-card">
-        <img src="servico.jpg" alt="">
         <h3>Diagnóstico Avançado</h3>
+        <img src="images/foto3.jpg" alt="">
         <p></p>
       </div>
 
       <div class="servico-card">
-        <img src="servico.jpg" alt="">
         <h3>Elétrica em Geral</h3>
+        <img src="images/eletrica.jpg" alt="">
         <p></p>
       </div>
 
       <div class="servico-card">
-        <img src="servico.jpg" alt="">
         <h3>Câmbio Automático</h3>
+        <img src="images/cambio.jpg" alt="">
         <p></p>
       </div>
 
