container quem somos create

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <li>Transparência: Orçamentos detalhados e respeito ao cliente.</li>
   </ul>
 </div>
+  <div class="container">
         <div id="dots">
               <span class="dot active" data-index="0"></span>
               <span class="dot" data-index="1"></span>
@@ -78,6 +79,7 @@
               <span class="dot" data-index="4"></span>
         </div>
         <img id="carousel-image" src="images/foto1.jpg" alt="Imagem">
+  </div>
   </section>
 
   <!-- ===== PARTE 4 | SERVIÇOS ===== -->
