--- a/index.html
+++ b/index.html
@@ -175,16 +175,48 @@
 
   <!-- ===== LOCALIZAÇÃO ===== -->
   <section class="localizacao" id="localizacao">
-    <h2>Como chegar</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.140868551797!2d-43.4004763!3d-22.834277200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x69230ad60679102b%3A0x7c1d9880936d6ec1!2sNexus%20Oficina!5e0!3m2!1spt-BR!2sbr!4v1771331122696!5m2!1spt-BR!2sbr" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
-   <a href="https://www.google.com/maps/place/Nexus+Oficina/@-22.8340545,-43.4027731,16.75z/data=!4m14!1m7!3m6!1s0x69230ad60679102b:0x7c1d9880936d6ec1!2sNexus+Oficina!8m2!3d-22.8342772!4d-43.4004763!16s%2Fg%2F11lv54xdtb!3m5!1s0x69230ad60679102b:0x7c1d9880936d6ec1!8m2!3d-22.8342772!4d-43.4004763!16s%2Fg%2F11lv54xdtb?entry=ttu&g_ep=EgoyMDI2MDIxOC4wIKXMDSoASAFQAw%3D%3D" class="adress" >
-     📍 Rua Capitão Mário Barbedo, 540 📍
-    </a>
+      <h2>Como chegar</h2>
+          <div class="container-loc">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.140868551797!2d-43.4004763!3d-22.834277200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x69230ad60679102b%3A0x7c1d9880936d6ec1!2sNexus%20Oficina!5e0!3m2!1spt-BR!2sbr!4v1771331122696!5m2!1spt-BR!2sbr" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
+                  <a href="https://www.google.com/maps/place/Nexus+Oficina/@-22.8340545,-43.4027731,16.75z/data=!4m14!1m7!3m6!1s0x69230ad60679102b:0x7c1d9880936d6ec1!2sNexus+Oficina!8m2!3d-22.8342772!4d-43.4004763!16s%2Fg%2F11lv54xdtb!3m5!1s0x69230ad60679102b:0x7c1d9880936d6ec1!8m2!3d-22.8342772!4d-43.4004763!16s%2Fg%2F11lv54xdtb?entry=ttu&g_ep=EgoyMDI2MDIxOC4wIKXMDSoASAFQAw%3D%3D" class="adress" >
+                    📍 Rua Capitão Mário Barbedo, 540 📍
+                  </a>
+          </div>
   </section>
 
   <!-- ===== FOOTER ===== -->
   <footer class="premium-footer">
+<div class="footer-top">
+    <img src="images/logo.jpg" alt="Nexus Oficina" class="footer-logo">
 
+    <div class="footer-contact">
+      <p>📞 WhatsApp: (21) 99876-1020</p>
+      <p>📷 Instagram: @nexus.oficina</p>
+    </div>
+
+    <div class="footer-links">
+      <a href="#">Sobre nós</a>
+      <a href="#">Serviços</a>
+      <a href="#">Contato</a>
+    </div>
+
+    <p class="copyright">
+      © 2026 Nexus Oficina. Todos os direitos reservados.
+    </p>
+  </div>
+
+  <div class="footer-dev">
+    <div class="dev-left">
+      <p>Site desenvolvido por</p>
+      <h3>Vitor Frota</h3>
+    </div>
+
+    <div class="dev-links">
+      <a href="#">GitHub</a>
+      <a href="#">LinkedIn</a>
+      <a href="mailto:contato@vitorfrota.com">Email</a>
+    </div>
+  </div>
  
 </footer>
   
