--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </header>
   <!-- ===== MENU MOBILE ===== -->
   <nav class="mobile-menu" id="mobileMenu">
+    <button class="close-menu" id="closeMenu">x</button>
     <a href="#home">Home</a>
     <a href="#servicos">Serviços</a>
     <a href="#quem-somos">Quem somos</a>
